--- a/src/template.html
+++ b/src/template.html
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Page</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><button>Home</button></li>
-                <li><button>Menu</button></li>
-                <li><button>About</button></li>
-                <li><button>Contact</button></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="content"></div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>The Shrouded Diner</title>
+	</head>
+	<body class="font-playfair text-stone-900">
+		<header>
+			<nav class="z-10 flex bg-indigo-950 text-gray-300 p-4 font-inter fixed w-full sm:text-xl">
+				<ul class="flex sm:gap-6 justify-between w-full sm:justify-start">
+					<li><button class="hover:text-white hover:underline underline-offset-4">Home</button></li>
+					<li><button class="hover:text-white hover:underline underline-offset-4">Menu</button></li>
+					<li><button class="hover:text-white hover:underline underline-offset-4">About</button></li>
+					<li><button class="hover:text-white hover:underline underline-offset-4">Contact</button></li>
+				</ul>
+			</nav>
+		</header>
+		<div id="content">
+			<section class="h-screen bg-black relative" id="hero">
+				<div class= "z-10 text-2xl sm:text-3xl absolute top-1/3 -translate-y-1/3 text-red-300 text-center w-5/6 -translate-x-1/2 left-1/2">
+					<h1 class="font-bold text-5xl lg:text-7xl leading-relaxed underline underline-offset-8">Welcome to The Shrouded Diner!</h1>
+					<p class="mt-12 text-slate-200 leading-relaxed italic">
+						We serve you the most delicious food with our first class
+						ingredients and exclusive recipes.
+					</p>
+				</div>
+                <img class="h-full w-full object-cover brightness-[0.2] grayscale blur-sm" src="./assets/restaurant.jpg" alt="">
+			</section>
+		</div>
+	</body>
 </html>
