refactor: refactor page content into js sections and organize src directory structure

--- a/src/template.html
+++ b/src/template.html
@@ -34,81 +34,7 @@
 			</nav>
 		</header>
 		<div id="content">
-			<section class="h-screen bg-black relative" id="hero">
-				<div
-					class="z-10 text-2xl sm:text-3xl absolute top-1/2 -translate-y-1/2 text-red-300 text-center w-5/6 -translate-x-1/2 left-1/2">
-					<h1
-						class="font-bold text-5xl lg:text-7xl leading-relaxed underline underline-offset-8">
-						Welcome to The Shrouded Diner!
-					</h1>
-					<p class="mt-12 text-slate-200 leading-relaxed italic">
-						We serve you the most delicious food with our first class
-						ingredients and exclusive recipes.
-					</p>
-				</div>
-				<img
-					class="h-full w-full object-cover brightness-[0.2] grayscale blur-sm"
-					src="./assets/restaurant.jpg"
-					alt="Wine Glasses on Table Tops - by Chan Walrus" />
-			</section>
-			<section class="bg-gradient-to-b from-stone-200 to-stone-400 p-6" id="info">
-				<h1
-					class="w-fit mx-auto text-6xl text-center font-semibold underline underline-offset-8">
-					What we offer
-				</h1>
-				<div
-					class="text-xl mx-auto font-inter mt-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 w-full lg:w-3/4">
-					<div
-						class="bg-stone-200 border border-black rounded-lg shadow-lg shadow-gray-400 hover:scale-105 transition hover:bg-red-900 hover:text-gray-200">
-						<h2
-							class="font-semibold font-playfair text-3xl p-2 border-b border-gray-400">
-							Mystical Cuisine
-						</h2>
-						<p class="p-2">
-							Step into a world of flavors cloaked in mystery. Our chefs craft
-							dishes that tantalize your taste buds and ignite your curiosity.
-							From smoky appetizers to desserts that glow in the dark, each
-							plate tells a story.
-						</p>
-					</div>
-					<div
-						class="bg-stone-200 border border-black rounded-lg shadow-lg shadow-gray-400 hover:scale-105 transition hover:bg-red-900 hover:text-gray-200">
-						<h2
-							class="font-semibold font-playfair text-3xl p-2 border-b border-gray-400">
-							The Veiled Lounge
-						</h2>
-						<p class="p-2">
-							Unwind in an ambiance like no other. Dim lights, velvety seating,
-							and a curated playlist transport you to a serene escape. Perfect
-							for a quiet dinner or an intimate gathering.
-						</p>
-					</div>
-					<div
-						class="bg-stone-200 border border-black rounded-lg shadow-lg shadow-gray-400 hover:scale-105 transition hover:bg-red-900 hover:text-gray-200">
-						<h2
-							class="font-semibold font-playfair text-3xl p-2 border-b border-gray-400">
-							Shadowy Feasts
-						</h2>
-						<p class="p-2">
-							Gather your allies for a feast fit for adventurers. Our shadowy
-							platters are designed for sharing, featuring a medley of tastes
-							that will leave you in awe.
-						</p>
-					</div>
-					<div
-						class="bg-stone-200 border border-black rounded-lg shadow-lg shadow-gray-400 hover:scale-105 transition hover:bg-red-900 hover:text-gray-200">
-						<h2
-							class="font-semibold font-playfair text-3xl p-2 border-b border-gray-400">
-							Interactive Dining Experience
-						</h2>
-						<p class="p-2">
-							At The Shrouded Diner, you're part of the story. Solve riddles to
-							unlock menu items, uncover hidden messages, and immerse yourself
-							in a dining experience like no other.
-						</p>
-					</div>
-				</div>
-			</section>
+				<!--Content will be rendered here using JavaScript-->
 		</div>
 	</body>
 </html>
