--- a/src/template.html
+++ b/src/template.html
@@ -1,45 +1,130 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>The Shrouded Diner</title>
-    </head>
-    <body class="font-playfair text-stone-900">
-        <header>
-            <nav
-                class="z-20 flex items-center bg-indigo-950 text-gray-300 py-2 px-4 font-inter fixed w-full text-3xl sm:text-lg shadow-lg shadow-black">
-                <img class="h-14 pr-4 border-r border-gray-400 border-opacity-50" src="assets/shrouded-diner-logo.png" alt="Shrouded Diner Logo">
-                <ul class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
-                    <li class="active nav-el">
-                        <button>
-                            <span class="icon-[fluent--home-16-regular]"></span>
-                            <span>Home</span>
-                        </button>
-                    </li>
-                    <li class="nav-el">
-                        <button>
-                            <span class="icon-[material-symbols--restaurant-menu]"></span>
-                            <span>Menu</span>
-                        </button>
-                    </li>
-                    <li class="nav-el">
-                        <button>
-                            <span class="icon-[mdi--about-variant]"></span>
-                            <span>About</span>
-                        </button>
-                    </li>
-                    <li class="nav-el">
-                        <button>
-                            <span class="icon-[grommet-icons--contact]"></span>
-                            <span>Contact</span>
-                        </button>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div id="content">
-                <!--Content will be rendered here using JavaScript-->
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>The Shrouded Diner</title>
+	</head>
+	<body class="font-playfair text-stone-900">
+		<header>
+			<nav
+				class="z-20 flex items-center bg-indigo-950 text-gray-300 py-2 px-4 font-inter fixed w-full text-3xl sm:text-lg shadow-md shadow-gray-800">
+				<img
+					class="h-14 pr-4 border-r border-gray-400 border-opacity-50"
+					src="assets/shrouded-diner-logo.png"
+					alt="Shrouded Diner Logo" />
+				<ul
+					class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
+					<li class="active nav-el">
+						<button>
+							<span class="icon-[fluent--home-16-regular]"></span>
+							<span>Home</span>
+						</button>
+					</li>
+					<li class="nav-el">
+						<button>
+							<span class="icon-[material-symbols--restaurant-menu]"></span>
+							<span>Menu</span>
+						</button>
+					</li>
+					<li class="nav-el">
+						<button>
+							<span class="icon-[mdi--about-variant]"></span>
+							<span>About</span>
+						</button>
+					</li>
+					<li class="nav-el">
+						<button>
+							<span class="icon-[grommet-icons--contact]"></span>
+							<span>Contact</span>
+						</button>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<div id="content">
+			<!--Content will be rendered here using JavaScript-->
+			<section
+				class="bg-red-500 min-h-screen text-gray-100 text-xl block pt-16"
+				id="menu">
+				<div class="h-screen sm:h-[50vh] w-full relative">
+					<img
+						class="h-full w-full object-cover brightness-[0.5] grayscale blur-sm"
+						src="./assets/menu.jpg"
+						alt="" />
+					<h1
+						class="absolute top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 text-5xl font-semibold text-center w-fit p-4 mx-auto bg-slate-900 bg-opacity-70 rounded-lg shadow-lg shadow-gray-900">
+						Our Menu
+					</h1>
+				</div>
+				<div class="grid grid-cols-1 lg:grid-cols-3">
+					<div class="menu-category">
+						<h2>
+							<span class="icon-[fluent--food-toast-16-filled]"></span
+							>Appetizers
+						</h2>
+						<div class="menu-container">
+                            <div class="menu-card">
+                                <h3>Lorem</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Pariatur voluptatibus dolorem quia voluptatum quaerat
+                                    praesentium rerum facere sit facilis placeat nemo nam, dolores
+                                    voluptatem eaque necessitatibus dolorum ratione aliquam quae.
+                                </p>
+                            </div>
+                            <div class="menu-card">
+                                <h3>Ipsum</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Molestiae voluptas, velit reprehenderit, facere dignissimos
+                                    alias ipsam atque optio ad veritatis sequi voluptatibus, minima
+                                    aspernatur id vel dolores. Obcaecati, eaque numquam!
+                                </p>
+                            </div>
+                        </div>
+					</div>
+					<div class="menu-category">
+						<h2>
+							<span class="icon-[material-symbols--restaurant]"></span>Main Course
+						</h2>
+						<div class="menu-container">
+                            <div class="menu-card">
+                                <h3>Dolor</h3>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Tempore enim natus iure sed harum excepturi quisquam rem
+                                    perferendis, quae temporibus eaque tempora aliquid dolor quam
+                                    molestias esse repellendus veritatis debitis?
+                                </p>
+                            </div>
+                            <div class="menu-card">
+                                <h3>Dolor</h3>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Tempore enim natus iure sed harum excepturi quisquam rem
+                                    perferendis, quae temporibus eaque tempora aliquid dolor quam
+                                    molestias esse repellendus veritatis debitis?
+                                </p>
+                            </div>
+                        </div>
+					</div>
+					<div class="menu-category">
+						<h2><span class="icon-[mdi--cupcake]"></span>Desserts</h2>
+						<div class="menu-container">
+                            <div class="menu-card">
+                                <h3>Dolor</h3>
+                                <p>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Tempore enim natus iure sed harum excepturi quisquam rem
+                                    perferendis, quae temporibus eaque tempora aliquid dolor quam
+                                    molestias esse repellendus veritatis debitis?
+                                </p>
+                            </div>
+                        </div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</body>
 </html>
