--- a/src/template.html
+++ b/src/template.html
@@ -15,25 +15,25 @@
 					alt="Shrouded Diner Logo" />
 				<ul
 					class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
-					<li class="active nav-el">
+					<li data-nav="home" class="active nav-el">
 						<button>
 							<span class="icon-[fluent--home-16-regular]"></span>
 							<span>Home</span>
 						</button>
 					</li>
-					<li class="nav-el">
+					<li data-nav="menu" class="nav-el">
 						<button>
 							<span class="icon-[material-symbols--restaurant-menu]"></span>
 							<span>Menu</span>
 						</button>
 					</li>
-					<li class="nav-el">
+					<li data-nav="about" class="nav-el">
 						<button>
 							<span class="icon-[mdi--about-variant]"></span>
 							<span>About</span>
 						</button>
 					</li>
-					<li class="nav-el">
+					<li data-nav="contact" class="nav-el">
 						<button>
 							<span class="icon-[grommet-icons--contact]"></span>
 							<span>Contact</span>
