--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
 	<body class="font-playfair text-stone-900">
 		<header>
 			<nav
-				class="z-20 flex items-center bg-indigo-950 text-gray-300 py-2 px-4 font-inter fixed w-full text-3xl sm:text-lg shadow-md shadow-gray-800">
+				class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-gray-900">
 				<img
-					class="h-14 pr-4 border-r border-gray-400 border-opacity-50"
+					class="h-12 pr-4 border-r border-gray-400 border-opacity-50"
 					src="assets/shrouded-diner-logo.png"
 					alt="Shrouded Diner Logo" />
 				<ul
