--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 	<body class="font-playfair text-stone-900">
 		<header>
 			<nav
-				class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-gray-900">
+				class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-black">
 				<img
 					class="h-12 pr-4 border-r border-gray-400 border-opacity-50"
 					src="assets/shrouded-diner-logo.png"
