feat: add about page template

--- a/src/template.html
+++ b/src/template.html
@@ -44,6 +44,48 @@
 		</header>
 		<div id="content">
 			<!--Content will be rendered here using JavaScript-->
+			<section
+				id="about"
+				class="min-h-screen lg:h-screen bg-black flex items-center justify-center">
+				<div
+					class="about-card">
+					<div class="flex-1">
+						<img
+							class="about-img"
+							src="./assets/restaurant_table.jpg"
+							alt="" />
+					</div>
+					<div class="about-text-container">
+						<h2>
+							About Us
+						</h2>
+						<p>
+							Welcome to The Shrouded Diner, where every meal is wrapped in
+							mystery and served with a dash of intrigue. Nestled in the heart
+							of the city, our diner is more than just a place to eat—it's an
+							experience.
+						</p>
+						<p>
+							From the moment you step through our doors, you’ll be transported
+							to a world of warmth and wonder. With its dimly lit, atmospheric
+							interiors and a menu full of culinary surprises, The Shrouded
+							Diner promises an adventure for your taste buds. Our chefs craft
+							dishes that combine bold flavors with a touch of the unexpected,
+							drawing inspiration from cuisines around the globe.
+						</p>
+						<p>
+							Whether you're seeking a cozy corner for an intimate dinner or a
+							lively space to gather with friends, our diner offers something
+							for everyone. And for those who dare, our "Secret Menu" offers
+							hidden gems for the curious and brave.
+						</p>
+						<p>
+							At The Shrouded Diner, every meal tells a story. Come join us and
+							let us share ours with you.
+						</p>
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
