--- a/src/template.html
+++ b/src/template.html
@@ -43,7 +43,34 @@
 			</nav>
 		</header>
 		<div id="content">
-			<!--Content will be rendered here using JavaScript-->	
+			<!--Content will be rendered here using JavaScript-->
+			<section class="h-screen bg-reception bg-cover bg-black/80 bg-blend-multiply text-gray-200" id="contact">
+				<h2 class="pt-20 text-gray-200 text-5xl font-semibold text-center underline">Reserve a seat</h2>
+				<div>
+					<form class="backdrop-blur-md text-xl max-w-md mx-auto mt-10 p-8 bg-gray-800/50 rounded-lg shadow-lg">
+						<div class="mb-4">
+							<label for="name" class="block text-gray-300 mb-2">Name</label>
+							<input type="text" id="name" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
+						</div>
+						<div class="mb-4">
+							<label for="email" class="block text-gray-300 mb-2">Email</label>
+							<input type="email" id="email" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
+						</div>
+						<div class="mb-4">
+							<label for="date" class="block text-gray-300 mb-2">Date</label>
+							<input type="date" id="date" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
+						</div>
+						<div class="mb-4">
+							<label for="time" class="block text-gray-300 mb-2">Time</label>
+							<input type="time" id="time" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
+						</div>
+						<button type="submit"
+							class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+							Reserve
+						</button>
+					</form>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
