--- a/src/template.html
+++ b/src/template.html
@@ -1,76 +1,75 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>The Shrouded Diner</title>
-	</head>
-	<body class="font-playfair text-stone-900">
-		<header>
-			<nav
-				class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-black">
-				<img
-					class="h-12 pr-4 border-r border-gray-400 border-opacity-50"
-					src="assets/shrouded-diner-logo.png"
-					alt="Shrouded Diner Logo" />
-				<ul
-					class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
-					<li data-nav="home" class="active nav-el">
-						<button>
-							<span class="icon-[fluent--home-16-regular]"></span>
-							<span>Home</span>
-						</button>
-					</li>
-					<li data-nav="menu" class="nav-el">
-						<button>
-							<span class="icon-[material-symbols--restaurant-menu]"></span>
-							<span>Menu</span>
-						</button>
-					</li>
-					<li data-nav="about" class="nav-el">
-						<button>
-							<span class="icon-[mdi--about-variant]"></span>
-							<span>About</span>
-						</button>
-					</li>
-					<li data-nav="contact" class="nav-el">
-						<button>
-							<span class="icon-[grommet-icons--contact]"></span>
-							<span>Contact</span>
-						</button>
-					</li>
-				</ul>
-			</nav>
-		</header>
-		<div id="content">
-			<!--Content will be rendered here using JavaScript-->
-			<section class="h-screen bg-reception bg-cover bg-black/80 bg-blend-multiply text-gray-200" id="contact">
-				<h2 class="pt-20 text-gray-200 text-5xl font-semibold text-center underline">Reserve a seat</h2>
-				<div>
-					<form class="backdrop-blur-md text-xl max-w-md mx-auto mt-10 p-8 bg-gray-800/50 rounded-lg shadow-lg">
-						<div class="mb-4">
-							<label for="name" class="block text-gray-300 mb-2">Name</label>
-							<input type="text" id="name" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
-						</div>
-						<div class="mb-4">
-							<label for="email" class="block text-gray-300 mb-2">Email</label>
-							<input type="email" id="email" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
-						</div>
-						<div class="mb-4">
-							<label for="date" class="block text-gray-300 mb-2">Date</label>
-							<input type="date" id="date" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
-						</div>
-						<div class="mb-4">
-							<label for="time" class="block text-gray-300 mb-2">Time</label>
-							<input type="time" id="time" class="w-full p-2 rounded bg-gray-700 text-gray-200" required />
-						</div>
-						<button type="submit"
-							class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-							Reserve
-						</button>
-					</form>
-				</div>
-			</section>
-		</div>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>The Shrouded Diner</title>
+</head>
+
+<body class="font-playfair text-stone-900">
+	<header>
+		<nav
+			class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-black">
+			<img class="h-12 pr-4 border-r border-gray-400 border-opacity-50" src="assets/shrouded-diner-logo.png"
+				alt="Shrouded Diner Logo" />
+			<ul class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
+				<li data-nav="home" class="active nav-el">
+					<button>
+						<span class="icon-[fluent--home-16-regular]"></span>
+						<span>Home</span>
+					</button>
+				</li>
+				<li data-nav="menu" class="nav-el">
+					<button>
+						<span class="icon-[material-symbols--restaurant-menu]"></span>
+						<span>Menu</span>
+					</button>
+				</li>
+				<li data-nav="about" class="nav-el">
+					<button>
+						<span class="icon-[mdi--about-variant]"></span>
+						<span>About</span>
+					</button>
+				</li>
+				<li data-nav="contact" class="nav-el">
+					<button>
+						<span class="icon-[grommet-icons--contact]"></span>
+						<span>Contact</span>
+					</button>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<div id="content">
+		<!--Content will be rendered here using JavaScript-->
+		<section class="contact-section" id="contact">
+			<h2>Reserve a seat</h2>
+			<div>
+				<form class="contact-form">
+					<div>
+						<label for="name">Name</label>
+						<input type="text" id="name" required />
+					</div>
+					<div>
+						<label for="email">Email</label>
+						<input type="email" id="email" required />
+					</div>
+					<div>
+						<label for="date">Date</label>
+						<input type="date" id="date" required />
+					</div>
+					<div>
+						<label for="time">Time</label>
+						<input type="time" id="time" required />
+					</div>
+					<button type="submit">
+						Reserve
+					</button>
+				</form>
+			</div>
+		</section>
+	</div>
+</body>
+
 </html>
