feat: add contact module and update tailwind module and styles

--- a/src/template.html
+++ b/src/template.html
@@ -43,10 +43,10 @@
 	</header>
 	<div id="content">
 		<!--Content will be rendered here using JavaScript-->
-		<section class="contact-section" id="contact">
+		<!-- <section class="contact-section" id="contact">
 			<h2>Reserve a seat</h2>
 			<div>
-				<form class="contact-form">
+				<form class="reservation-form">
 					<div>
 						<label for="name">Name</label>
 						<input type="text" id="name" required />
@@ -68,7 +68,7 @@
 					</button>
 				</form>
 			</div>
-		</section>
+		</section> -->
 	</div>
 </body>
 
