--- a/index.html
+++ b/index.html
@@ -1,75 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>The Shrouded Diner</title>
-<script defer src="main.js"></script></head>
-
-<body class="font-playfair text-stone-900">
-	<header>
-		<nav
-			class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-black">
-			<img class="h-12 pr-4 border-r border-gray-400 border-opacity-50" src="84db0f44a26e74c9b7b7.png"
-				alt="Shrouded Diner Logo" />
-			<ul class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start">
-				<li data-nav="home" class="active nav-el">
-					<button>
-						<span class="icon-[fluent--home-16-regular]"></span>
-						<span>Home</span>
-					</button>
-				</li>
-				<li data-nav="menu" class="nav-el">
-					<button>
-						<span class="icon-[material-symbols--restaurant-menu]"></span>
-						<span>Menu</span>
-					</button>
-				</li>
-				<li data-nav="about" class="nav-el">
-					<button>
-						<span class="icon-[mdi--about-variant]"></span>
-						<span>About</span>
-					</button>
-				</li>
-				<li data-nav="contact" class="nav-el">
-					<button>
-						<span class="icon-[grommet-icons--contact]"></span>
-						<span>Contact</span>
-					</button>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<div id="content">
-		<!--Content will be rendered here using JavaScript-->
-		<!-- <section class="contact-section" id="contact">
-			<h2>Reserve a seat</h2>
-			<div>
-				<form class="reservation-form">
-					<div>
-						<label for="name">Name</label>
-						<input type="text" id="name" required />
-					</div>
-					<div>
-						<label for="email">Email</label>
-						<input type="email" id="email" required />
-					</div>
-					<div>
-						<label for="date">Date</label>
-						<input type="date" id="date" required />
-					</div>
-					<div>
-						<label for="time">Time</label>
-						<input type="time" id="time" required />
-					</div>
-					<button type="submit">
-						Reserve
-					</button>
-				</form>
-			</div>
-		</section> -->
-	</div>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>The Shrouded Diner</title><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body class="font-playfair text-stone-900"><header><nav class="z-20 flex items-center bg-slate-900 text-gray-300 py-1 px-4 font-inter fixed w-full text-2xl sm:text-base shadow-lg shadow-black"><img class="h-12 pr-4 border-r border-gray-400 border-opacity-50" src="84db0f44a26e74c9b7b7.png" alt="Shrouded Diner Logo"/><ul class="flex pl-4 sm:gap-6 justify-center gap-10 w-full sm:justify-start"><li data-nav="home" class="active nav-el"><button><span class="icon-[fluent--home-16-regular]"></span> <span>Home</span></button></li><li data-nav="menu" class="nav-el"><button><span class="icon-[material-symbols--restaurant-menu]"></span> <span>Menu</span></button></li><li data-nav="about" class="nav-el"><button><span class="icon-[mdi--about-variant]"></span> <span>About</span></button></li><li data-nav="contact" class="nav-el"><button><span class="icon-[grommet-icons--contact]"></span> <span>Contact</span></button></li></ul></nav></header><div id="content"></div></body></html>
